# APE

./: .gitignore  Makefile  README.md  make_cmdline.cmd  make_exe.cmd  meson.build  runape.pl
java/: README.md  pom.xml
prolog/: meson.build
prolog/lexicon/: meson.build
prolog/logger/: meson.build
prolog/parser/: meson.build
prolog/utils/: meson.build
prolog/utils/owlswrl/: meson.build
tests/: .gitignore  meson.build
