configure_file(input: 'chars.pl', output: 'chars.pl', configuration: configuration_data())
configure_file(input: 'clex_lexicon.pl', output: 'clex_lexicon.pl', configuration: configuration_data())
configure_file(input: 'clex.pl', output: 'clex.pl', configuration: configuration_data())
configure_file(input: 'functionwords.pl', output: 'functionwords.pl', configuration: configuration_data())
configure_file(input: 'illegalwords.pl', output: 'illegalwords.pl', configuration: configuration_data())
configure_file(input: 'is_in_lexicon.pl', output: 'is_in_lexicon.pl', configuration: configuration_data())
configure_file(input: 'lexicon_interface.pl', output: 'lexicon_interface.pl', configuration: configuration_data())
configure_file(input: 'ulex.pl', output: 'ulex.pl', configuration: configuration_data())
configure_file(input: 'spellcheck.pl', output: 'spellcheck.pl', configuration: configuration_data())
