subdir('owlswrl')
configure_file(input: 'ace_niceace.pl', output: 'ace_niceace.pl', configuration: configuration_data())
configure_file(input: 'are_equivalent.pl', output: 'are_equivalent.pl', configuration: configuration_data())
configure_file(input: 'drs_ops.pl', output: 'drs_ops.pl', configuration: configuration_data())
configure_file(input: 'drs_reverse.pl', output: 'drs_reverse.pl', configuration: configuration_data())
configure_file(input: 'drs_to_ace.pl', output: 'drs_to_ace.pl', configuration: configuration_data())
configure_file(input: 'drs_to_ascii.pl', output: 'drs_to_ascii.pl', configuration: configuration_data())
configure_file(input: 'drs_to_coreace.pl', output: 'drs_to_coreace.pl', configuration: configuration_data())
configure_file(input: 'drs_to_drslist.pl', output: 'drs_to_drslist.pl', configuration: configuration_data())
configure_file(input: 'drs_to_fol_to_prenex.pl', output: 'drs_to_fol_to_prenex.pl', configuration: configuration_data())
configure_file(input: 'drs_to_html.pl', output: 'drs_to_html.pl', configuration: configuration_data())
configure_file(input: 'drs_to_npace.pl', output: 'drs_to_npace.pl', configuration: configuration_data())
configure_file(input: 'drs_to_ruleml.pl', output: 'drs_to_ruleml.pl', configuration: configuration_data())
configure_file(input: 'drs_to_sdrs.pl', output: 'drs_to_sdrs.pl', configuration: configuration_data())
configure_file(input: 'drs_to_tptp.pl', output: 'drs_to_tptp.pl', configuration: configuration_data())
configure_file(input: 'drs_to_xml.pl', output: 'drs_to_xml.pl', configuration: configuration_data())
configure_file(input: 'drs_utils.pl', output: 'drs_utils.pl', configuration: configuration_data())
configure_file(input: 'implication_turn.pl', output: 'implication_turn.pl', configuration: configuration_data())
configure_file(input: 'is_wellformed.pl', output: 'is_wellformed.pl', configuration: configuration_data())
configure_file(input: 'morphgen.pl', output: 'morphgen.pl', configuration: configuration_data())
configure_file(input: 'serialize_term.pl', output: 'serialize_term.pl', configuration: configuration_data())
configure_file(input: 'tree_utils.pl', output: 'tree_utils.pl', configuration: configuration_data())
configure_file(input: 'trees_to_ascii.pl', output: 'trees_to_ascii.pl', configuration: configuration_data())
configure_file(input: 'xmlterm_to_xmlatom.pl', output: 'xmlterm_to_xmlatom.pl', configuration: configuration_data())