configure_file(input: 'drs_to_owldrs.pl', output: 'drs_to_owldrs.pl', configuration: configuration_data())
configure_file(input: 'drs_to_owlswrl_core.pl', output: 'drs_to_owlswrl_core.pl', configuration: configuration_data())
configure_file(input: 'drs_to_owlswrl.pl', output: 'drs_to_owlswrl.pl', configuration: configuration_data())
configure_file(input: 'get_owl_output.pl', output: 'get_owl_output.pl', configuration: configuration_data())
configure_file(input: 'illegal_conditions.pl', output: 'illegal_conditions.pl', configuration: configuration_data())
configure_file(input: 'implication_to_swrl.pl', output: 'implication_to_swrl.pl', configuration: configuration_data())
configure_file(input: 'owlfss_owlrdfxml.pl', output: 'owlfss_owlrdfxml.pl', configuration: configuration_data())
configure_file(input: 'owlswrl_iri.pl', output: 'owlswrl_iri.pl', configuration: configuration_data())
configure_file(input: 'owlswrl_to_fss.pl', output: 'owlswrl_to_fss.pl', configuration: configuration_data())
configure_file(input: 'owlswrl_to_xml.pl', output: 'owlswrl_to_xml.pl', configuration: configuration_data())
configure_file(input: 'simplify_axiom.pl', output: 'simplify_axiom.pl', configuration: configuration_data())
configure_file(input: 'transform_anonymous.pl', output: 'transform_anonymous.pl', configuration: configuration_data())